# soma

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Whitepaper_ SOMA_ A Self-Organizing Mechanomorphic Agent.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/adr/: 001  002
scripts/: __init__.py  caregiver.py  eval.py  replay.py  run.py
soma/cogs/caregiver/: __init__.py  interface.py
soma/cogs/channel/: __init__.py  symbolic.py
soma/cogs/curiosity/: __init__.py  curiosity.py
soma/cogs/learning/: __init__.py  learning.py
soma/cogs/memory/: __init__.py  assoc.py  memory.py
soma/cogs/motivation/: __init__.py  motivation.py
soma/cogs/perception/: __init__.py  embedder.py  features.py
soma/cogs/planner/: __init__.py  planner.py
soma/cogs/reflex/: __init__.py  reflex.py
soma/cogs/self_notes/: __init__.py  notes.py
soma/cogs/state_tracker/: __init__.py  tracker.py
soma/cogs/working_memory/: __init__.py  staleness.py
soma/core/: __init__.py  events.py  state.py  store.py  tick.py
soma/eval/: __init__.py  metrics.py  report.py
soma/sandbox/: __init__.py  gridworld.py
soma/sandbox/v1/: __init__.py  env.py
tests/: __init__.py  test_novelty.py  test_overload.py  test_symbol_channel.py
