[project]
name = "soma"
version = "0.0.1"
description = "Self-Organizing Mechanomorphic Agent (M0 scaffold)"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soma*"]